Removed background-size; fixed image wrap bug

--- a/css/style.css
+++ b/css/style.css
@@ -767,7 +767,6 @@
 			{
 				background-color: #81918E;
 				background-image: url('http://templeuweb.com/flash/09/TU_PhilaSkyline.jpg');
-				background-size: 1920px 768px;
 				height:100vh;
 			}
 
